# learnopengl

./: build.zig  build.zig.zon  main.zig  meson.build
glad/include/glad/: glad.h
glad/src/: glad.c
src/: Rectangle.cpp  Shader.cpp  Texture.cpp  Triangle.cpp  TwoTriangleExercise.cpp
