project('LearnOpengl','cpp' ,'c')
glfw=dependency('glfw3')
gl=dependency('gl')

executable('triangle',['src/Triangle.cpp'],dependencies:[glfw,gl])
executable('rectangle',['src/Rectangle.cpp'],dependencies:[glfw,gl])
executable('2triangexer',['src/TwoTriangleExercise.cpp'],dependencies:[glfw,gl])
executable('shader',['src/Shader.cpp'],dependencies:[glfw,gl])
executable('texture',['src/Texture.cpp'],dependencies:[glfw,gl])
